fix: layout issue on ff and edge

--- a/src/jekyll/_sass/_base.scss
+++ b/src/jekyll/_sass/_base.scss
@@ -1,7 +1,8 @@
 body {
     overflow-x: hidden !important;
     display: flex;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     flex-direction: column;
     // font-family: "Roboto", sans-serif !important;
 }
@@ -12,7 +13,8 @@ main {
 }
 
 section {
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
 }
 
 .index-container {
